--- a/config_backtesting.json
+++ b/config_backtesting.json
@@ -32,168 +32,52 @@
         "use_order_book": true,
         "order_book_top": 1
     },
-
-    "exchange": {
-        "name": "binance",
-        "key": "",
-        "secret": "",
-        "ccxt_config": {
-            "enableRateLimit": true
-        },
-        "ccxt_async_config": {
-            "enableRateLimit": true,
-            "rateLimit": 50
-        },
-        "pair_whitelist": [
-            "BTC/USDT:USDT",
-            "GMT/USDT:USDT",
-             "ETH/USDT:USDT",
-             "MTL/USDT:USDT",
-             "NEAR/USDT:USDT",
-             "SOL/USDT:USDT",
-             "OGN/USDT:USDT",
-             "ZIL/USDT:USDT",
-            "APE/USDT:USDT",
-             "XRP/USDT:USDT",
-             "ADA/USDT:USDT",
-             "AVAX/USDT:USDT",
-             "KNC/USDT:USDT",
-             "DOGE/USDT:USDT",
-             "WAVES/USDT:USDT",
-             "1000SHIB/USDT:USDT",
-             "FTM/USDT:USDT",
-             "BNB/USDT:USDT",
-             "XMR/USDT:USDT",
-             "DOT/USDT:USDT",
-             "GALA/USDT:USDT",
-             "MATIC/USDT:USDT",
-             "LRC/USDT:USDT",
-             "RUNE/USDT:USDT",
-             "AUDIO/USDT:USDT",
-             "FIL/USDT:USDT",
-             "ETC/USDT:USDT",
-             "EOS/USDT:USDT",
-             "ZEC/USDT:USDT",
-             "AXS/USDT:USDT",
-             "LTC/USDT:USDT",
-             "SAND/USDT:USDT",
-             "LINK/USDT:USDT",
-             "SXP/USDT:USDT",
-             "ATOM/USDT:USDT",
-             "BCH/USDT:USDT",
-            "PEOPLE/USDT:USDT",
-             "MANA/USDT:USDT",
-             "AAVE/USDT:USDT",
-             "ALICE/USDT:USDT",
-            "BNX/USDT:USDT",
-             "KAVA/USDT:USDT",
-             "CRV/USDT:USDT",
-             "ONE/USDT:USDT",
-             "VET/USDT:USDT",
-             "THETA/USDT:USDT",
-             "DYDX/USDT:USDT",
-             "ICP/USDT:USDT",
-             "ALGO/USDT:USDT",
-             "SUSHI/USDT:USDT",
-             "REN/USDT:USDT",
-             "COMP/USDT:USDT",
-             "XLM/USDT:USDT",
-             "CHZ/USDT:USDT",
-             "TLM/USDT:USDT",
-             "TRX/USDT:USDT",
-             "XTZ/USDT:USDT",
-            "FTT/USDT:USDT",
-            "IMX/USDT:USDT",
-             "CELR/USDT:USDT",
-            "WOO/USDT:USDT",
-       
-             "HNT/USDT:USDT",
-             "EGLD/USDT:USDT",
-             "ENJ/USDT:USDT",
-             "CELO/USDT:USDT",
-             "BAT/USDT:USDT",
-             "KSM/USDT:USDT",
-             "UNI/USDT:USDT",
-            "ROSE/USDT:USDT",
-             "BAKE/USDT:USDT",
-             "RSR/USDT:USDT",
-             "IOST/USDT:USDT",
-             "GRT/USDT:USDT",
-             "DASH/USDT:USDT",
-             "ALPHA/USDT:USDT",
-            "FLOW/USDT:USDT",
-             "OCEAN/USDT:USDT",
-             "DENT/USDT:USDT",
-             "CHR/USDT:USDT",
-             "OMG/USDT:USDT",
-             "HOT/USDT:USDT",
-             "LINA/USDT:USDT",
-             "SRM/USDT:USDT",
-             "COTI/USDT:USDT",
-             "SKL/USDT:USDT",
-             "NEO/USDT:USDT",
-             "SNX/USDT:USDT",
-             "ICX/USDT:USDT",
-            "AR/USDT:USDT",
-             "1INCH/USDT:USDT",
-            "API3/USDT:USDT",
-             "ANKR/USDT:USDT",
-            "DUSK/USDT:USDT",
-             "REEF/USDT:USDT",
-             "BAL/USDT:USDT",
-             "BAND/USDT:USDT",
-             "ZRX/USDT:USDT",
-             "C98/USDT:USDT",
-             "QTUM/USDT:USDT",
-             "STORJ/USDT:USDT",
-             "IOTA/USDT:USDT",
-             "ONT/USDT:USDT",
-             "MASK/USDT:USDT",
-             "GTC/USDT:USDT",
-             "HBAR/USDT:USDT",
-             "MKR/USDT:USDT",
-             "TOMO/USDT:USDT",
-            "ENS/USDT:USDT",
-             "ZEN/USDT:USDT",
-             "SFP/USDT:USDT",
-             "CVC/USDT:USDT",
-             "IOTX/USDT:USDT",
-             "CTK/USDT:USDT",
-             "FLM/USDT:USDT",
-             "NKN/USDT:USDT",
-             "YFI/USDT:USDT",
-             "RLC/USDT:USDT",
-             "BTS/USDT:USDT",
-            "KLAY/USDT:USDT",
-             "BEL/USDT:USDT",
-             "XEM/USDT:USDT",
-            "ANT/USDT:USDT",
-             "SC/USDT:USDT",
-             "LIT/USDT:USDT",
-            "CTSI/USDT:USDT",
-             "STMX/USDT:USDT",
-             "UNFI/USDT:USDT",
-             "RVN/USDT:USDT",
-             "1000XEC/USDT:USDT",
-             "RAY/USDT:USDT",
-             "BLZ/USDT:USDT",
-             "ATA/USDT:USDT",
-            "ARPA/USDT:USDT",
-             "DGB/USDT:USDT",
-            "LPT/USDT:USDT",
-             "TRB/USDT:USDT",
-             "OP/USDT:USDT",
-             "GAL/USDT:USDT"
-        ],
-        "pair_blacklist": [
-            "BNB/.*",
-            "(BTC/USDT:USDT_.*|ETH/USDT:USDT_.*)",
-            "(GT|HT)/.*",
-            "(WBTC|BSV|BTCDOM|DEFI)/.*",
-            ".*(_PREMIUM|BEAR|BULL|DOWN|HALF|HEDGE|UP|[1235][SL])/.*",
-            "(AUD|BRZ|CAD|CHF|EUR|GBP|HKD|IDRT|JPY|NGN|RUB|SGD|TRY|UAH|USD|ZAR|UST)/.*",
-            "(BUSD|C/USDT:USDT|DAI|PAX|PAXG|SUSD|TUSD|USDC|/USDT:USDT|VAI|USDN)/.*",
-            "(ACM|AFA|ALA|ALL|APL|ASR|ATM|BAR|CAI|CITY|FOR|GOZ|IBFK|LEG|LOCK-1|NAVI|NMR|NOV|OG|PFL|PSG|ROUSH|STV|TH|TRA|UCH|UFC|YBO)/.*"
+ 
+"exchange": {
+    "name": "kucoin",
+    "rateLimit": 200,
+    "ccxt_config": {
+        "enableRateLimit": true,
+        "options": {
+            "trading": {
+                "future": true
+            },
+            "defaultType": "future"
+        }
+    },
+    "ccxt_async_config": {
+        "enableRateLimit": true,
+        "option": {
+            "defaultType": "future",
+            "api": "http://futures-api.kucoin.com"
+        }
+   
+    "pair_whitelist": [
+        "BTC/USDT:USDT",
+        "ETH/USDT:USDT",
+        "LTC/USDT:USDT",
+        "XRP/USDT:USDT",
+        "BCH/USDT:USDT",
+        "EOS/USDT:USDT",
+        "TRX/USDT:USDT",
+        "BSV/USDT:USDT",
+        "ETC/USDT:USDT",
+        "LINK/USDT:USDT",
+        "ADA/USDT:USDT",
+        "DOT/USDT:USDT",
+        "XTZ/USDT:USDT",
+        "ATOM/USDT:USDT",
+        "XLM/USDT:USDT",
+        "ZEC/USDT:USDT"
+      
+        
+    ],
+    "api_key": "your_api_key",
+    "secret": "your_secret_key",
+    "password": "your_api_password"
+},
+    
+    "pair_blacklist": [
         ]
     },
     "pairlists": [
